updated activation mail style

--- a/server/templates/activation-mail.ejs
+++ b/server/templates/activation-mail.ejs
@@ -55,9 +55,14 @@
             color: #ffffff;
         }
 
-        body {
+        .body {
             padding: 30px;
             background-color: #ffffff;
+        }
+
+        .footer {
+            padding: 15px 30px;
+            background-color: #f6f6f6;
         }
     </style>
 </head>
