--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -16,6 +16,19 @@
   }
 }
 
+/* Remove input number arrows */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
 }
