--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -3,64 +3,90 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
 /* Remove input number arrows */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 /* Firefox */
-input[type=number] {
-  appearance: textfield;
-  -moz-appearance: textfield;
+input[type="number"] {
+    appearance: textfield;
+    -moz-appearance: textfield;
+}
+
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #1771c6;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #f5f5f5b0;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #32ae7e;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+    color: rgb(var(--foreground-rgb));
 }
 
 .hero_animation {
-  background-image: linear-gradient(147.92deg, hsla(239, 76%, 53%, 0.456) 10.41%, hsla(0, 0%, 100%, 0) 89.25%);
-  animation: changeBackgroundColor 8s infinite alternate;
+    background-image: linear-gradient(
+        147.92deg,
+        hsla(239, 76%, 53%, 0.456) 10.41%,
+        hsla(0, 0%, 100%, 0) 89.25%
+    );
+    animation: changeBackgroundColor 8s infinite alternate;
 }
 
 @keyframes changeBackgroundColor {
-  0%, 100% {
-    opacity: 1;
-  }
-  16.67% {
-    opacity: 0.9;
-  }
-  33.33% {
-    opacity: 0.8;
-  }
-  50% {
-    opacity: 0.6;
-  }
-  66.67% {
-    opacity: 0.5;
-  }
-  83.33% {
-    opacity: 0.4;
-  }
+    0%,
+    100% {
+        opacity: 1;
+    }
+    16.67% {
+        opacity: 0.9;
+    }
+    33.33% {
+        opacity: 0.8;
+    }
+    50% {
+        opacity: 0.6;
+    }
+    66.67% {
+        opacity: 0.5;
+    }
+    83.33% {
+        opacity: 0.4;
+    }
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
 }
